# sapsxpg

./: .gitignore  README.md  pyproject.toml
pysxpg/: __main__.py  cli.py
pysxpg/core/: utils.py
sapsxpg/: __main__.py  cli.py
sapsxpg/core/: sap.py  terminal.py
sapsxpg/utils/: banner.py  methods.py  template.py
src/sapsxpg/: __init__.py  banner.py  cli.py
src/sapsxpg/core/: sap.py  terminal.py
src/sapsxpg/utils/: methods.py  template.py
tests/: test_banner.py  test_cli.py  test_sap.py  test_utils.py
