[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "sapsxpg"
version = "0.9.0"
description = "Simplify the SXPG_CALL_SYSTEM usage on a targeted SAP system."
authors = [
    {name = "n3rada",email = "72791564+n3rada@users.noreply.github.com"}
]
license = {text = "GPL-3.0 license"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "prompt-toolkit (>=3.0.52,<4.0.0)",
    "pyrfc==3.3.1"  # ⚠️ Requires NWRFCSDK
]


[project.urls]
Repository  = "https://github.com/n3rada/sapsxpg"

[project.scripts]
sapsxpg = 'sapsxpg.cli:main'