[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"

[project]
name = "sapsxpg"
version = "0.8.1"
description = "Simplify the SXPG_CALL_SYSTEM usage on a targeted SAP system."
authors = [
    {name = "n3rada",email = "72791564+n3rada@users.noreply.github.com"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "prompt-toolkit>=3.0.52,<4.0.0",
]

[project.urls]
repository = "https://github.com/n3rada/sapsxpg"

[project.scripts]
sapsxpg = 'sapsxpg.cli:main'

[dependency-groups]
dev = ["pytest>=8.4.2"]

[tool.pytest.ini_options]
testpaths = ["tests"]